patches/new-colon-uninit
Bottom: 9c0f15c67d5f45e4b87958670eead653872c70dc
Top:    9477f5e9874d07f0df4725936e90e47570763555
Author: scott snyder <sss@karma>
Date:   2021-12-16 12:39:42 -0500

We get a false positive uninitialized variable warning from this source:

struct DbObjectGuard   {
  DbObjectGuard();
};

void allocate(char* ptr)
{
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
}


$ cppcheck x.cc
Checking x.cc ...
x.cc:7:18: error: Uninitialized variable: g [uninitvar]
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
                 ^

The warning goes away if the `::' before the new is removed.

Try to fix by extending matching to recognize this case.

